<resources>
    <string name="app_name">H3T STORE</string>
    <string name="email_h_ng_d_n_t_o_m_t_kh_u_c_g_i_n_h_y_ki_m_tra_email_v_l_m_theo_h_ng_d_n">Email hướng dẫn tạo mật khẩu đã được gửi đến đị. Hãy kiểm tra email và làm theo hướng dẫn.</string>
    <string name="menu_personal_1">Đơn hàng của tôi</string>
    <string name="menu_personal_2">Sổ địa chỉ</string>
    <string name="menu_personal_3">Sản phẩm đã mua</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lblName">Tran Thanh Tung</string>
    <string name="txtUsername">tranthanhtung1106</string>
    <string name="txtGender">Nam</string>
    <string name="txtDateOfBirth">11/06/1999</string>
    <string name="txtEmail">thanhtunglakiu99@gmail.com</string>
    <string name="txtPassword">*********************</string>
    <string name="title_activity_product_list">ProductList</string>
    <string name="view_detail">Xem chi tiết</string>
    <string name="re_buy">Mua lại</string>
    <string name="what_do_you_buy">Bạn muốn mua gì hôm nay ?</string>
    <string-array name="arr_thanhpho">
        <item>Hà Nội</item>
        <item>Hồ Chí Minh</item>
        <item>Đắk Lắk</item>
        <item>Hà Tĩnh</item>
        <item>Điện Biên</item>
        <item>Nghệ An</item>
        <item>Tiền Giang</item>
        <item>Hải Phòng</item>
        <item>An Giang</item>

        <item>

Bà Rịa - Vũng Tàu

</item>

        <item>

Bắc Giang

</item>

        <item>

Bắc Kạn

</item>

        <item>

Bạc Liêu

</item>

        <item>

Bắc Ninh

</item>

        <item>

Bến Tre

</item>

        <item>

Bình Định

</item>

        <item>

Bình Dương

</item>

        <item>

Bình Phước

</item>

        <item>

Bình Thuận

</item>

        <item>

Cà Mau

</item>

        <item>

Cao Bằng

</item>

        <item>

Đắk Nông

</item>

        <item>

Đồng Nai

</item>

        <item>

Đồng Tháp

</item>

        <item>

Gia Lai

</item>

        <item>

Hà Giang

</item>

        <item>

Hà Nam

</item>

        <item>

Hải Dương

</item>

        <item>

Hậu Giang

</item>

        <item>

Hòa Bình

</item>

        <item>

Hưng Yên

</item>

        <item>

Khánh Hòa

</item>

        <item>

Kiên Giang

</item>

        <item>

Kon Tum

</item>

        <item>

Lai Châu

</item>

        <item>

Lâm Đồng

</item>

        <item>

Lạng Sơn

</item>

        <item>

Lào Cai

</item>

        <item>

Long An

</item>

        <item>

Nam Định

</item>

        <item>

Ninh Bình

</item>

        <item>

Ninh Thuận

</item>

        <item>

Phú Thọ

</item>

        <item>

Quảng Bình

</item>

        <item>

Quảng Nam

</item>

        <item>

Quảng Ngãi

</item>

        <item>

Quảng Ninh

</item>

        <item>

Quảng Trị

</item>

        <item>

Sóc Trăng

</item>

        <item>

Sơn La

</item>

        <item>

Tây Ninh

</item>

        <item>

Thái Bình

</item>

        <item>

Thái Nguyên

</item>

        <item>

Thanh Hóa

</item>

        <item>

Thừa Thiên Huế

</item>

        <item>

Trà Vinh

</item>

        <item>

Tuyên Quang

</item>

        <item>

Vĩnh Long

</item>

        <item>

Vĩnh Phúc

</item>

        <item>

Yên Bái

</item>

        <item>

Phú Yên

</item>

        <item>

Cần Thơ

</item>

        <item>

Đà Nẵng

</item>

    </string-array>
</resources>
